crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_undo_success.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "Successfully undid last operation on path: File reverted successfully",
        ),
    ],
}
