crates/forge_app/src/snapshots/forge_app__execution_result__tests__net_fetch_success.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<http_response URL="https://example.com" status_code="200" start_char="0" end_char="55" total_chars="55" context="Content type text/plain cannot be simplified to markdown; Raw content provided instead"><![CDATA[# Example Website

This is some content from a website.]]></http_response>
