crates/forge_app/src/snapshots/forge_app__execution_result__tests__net_fetch_truncated.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<http_response URL="https://example.com/large-page" status_code="200" start_char="0" end_char="55" total_chars="72" context="" truncation="Content is truncated to 55 chars; Remaining content can be read from path: /tmp/forge_fetch_abc123.txt" truncation_tag="content is truncated to 55 chars, remaining content can be read from path: /tmp/forge_fetch_abc123.txt"><![CDATA[AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA]]></http_response>
