crates/forge_app/src/snapshots/forge_app__execution_result__tests__shell_output_empty_streams.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<shell_output
  command="silent_command"
  shell="/bin/bash"
  exit_code="0"
>
</shell_output>
