crates/forge_app/src/snapshots/forge_app__execution_result__tests__shell_output_no_truncation.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<shell_output>
<metadata>
<command><![CDATA[echo hello]]></command>
<shell>/bin/bash</shell>
<exit_code>0</exit_code>
</metadata>
<stdout><![CDATA[hello
world]]>
<total_lines>2</total_lines>
</stdout>
</shell_output>
