crates/forge_app/src/snapshots/forge_app__execution_result__tests__shell_output_single_line_each.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<shell_output>
<metadata>
<command><![CDATA[simple_command]]></command>
<shell>/bin/bash</shell>
<exit_code>0</exit_code>
</metadata>
<stdout
  total_lines="1"
><![CDATA[single stdout line]]>
</stdout>
<stderr
  total_lines="1"
><![CDATA[single stderr line]]>
</stderr>
</shell_output>
